removed contact form and added modal

--- a/src/components/experience.module.css
+++ b/src/components/experience.module.css
@@ -17,6 +17,9 @@
 .location {
   margin: 0 0;
   padding: .2rem 0;
+  font-size: 1rem;
+  font-family: var(--font-headings);
+  font-weight: normal;
   color: var(--highlight-color)
 }
 
