--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -32,8 +32,9 @@ footer {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  margin-top: auto;
-  margin-top: 5rem;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
   background-color: rgb(49, 49, 49);
   height: 10rem;
 }
@@ -49,6 +50,7 @@ main {
   flex-direction: column;
   align-items: center;
   padding: 0 10%;
+  padding-bottom: 12rem;
 }
 
 
@@ -58,6 +60,7 @@ main {
     flex-direction: column;
     align-items: center;
     padding: 0 0;
+    padding-bottom: 10rem;
     margin: 0 1rem;
   }
 }
