--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -172,7 +172,7 @@ h1 {
   align-self: center;
 }
 
-.modal-content h2, h3 {
+.modal-content h2, .modal-content h3 {
   margin-bottom: 0;
   padding-bottom: 0;
 }
